--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,10 +23,10 @@ platforms:
   driver_config:
     box: windows-2008R2
     box_url: https://s3.amazonaws.com/box-cutter-us-east-1-cloudtrail/windows/virtualbox4.3.14/win2008r2-datacenter-nocm.box
-- name: windows2012r2_cloud
+- name: windows-2012R2
   driver_config:
-    box: windows2012r2_cloud
-    box_url: https://s3.amazonaws.com/box-cutter-us-east-1-cloudtrail/windows/virtualbox4.3.12/win2012r2-datacenter-chef11.12.8.box
+    box: windows-2012R2
+    box_url: https://s3.amazonaws.com/box-cutter-us-east-1-cloudtrail/windows/virtualbox4.3.14/win2012-datacenter-nocm.box
 
 suites:
 - name: default
